[gd_scene load_steps=9 format=3 uid="uid://ssjdlnv0a3tx"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_qvj5b"]
[ext_resource type="Script" path="res://scripts/pentagram.gd" id="2_6g27l"]
[ext_resource type="Texture2D" uid="uid://cynyq53dtq28t" path="res://assets/sprites.png" id="3_wi1bf"]
[ext_resource type="Script" path="res://scripts/devil.gd" id="4_py54f"]
[ext_resource type="SpriteFrames" uid="uid://cin8m7s33hry0" path="res://resources/sprites.tres" id="5_mcb7l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41vbc"]
atlas = ExtResource("3_wi1bf")
region = Rect2(320, 0, 32, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8885p"]
radius = 7.0
height = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_t2h3j"]
blend_mode = 1
light_mode = 1

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvj5b")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="HeatViewport" type="SubViewport" parent="."]
disable_3d = true
size = Vector2i(320, 200)
render_target_update_mode = 4

[node name="Pentagram" type="Node2D" parent="HeatViewport"]
process_mode = 3
script = ExtResource("2_6g27l")

[node name="DeathSprite" type="Sprite2D" parent="HeatViewport"]
visible = false
position = Vector2(160, 192)
texture = SubResource("AtlasTexture_41vbc")

[node name="Priests" type="Node" parent="."]

[node name="Devil" type="Area2D" parent="."]
position = Vector2(160, 184)
collision_mask = 2
script = ExtResource("4_py54f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Devil"]
sprite_frames = ExtResource("5_mcb7l")
animation = &"devil_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Devil"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_8885p")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Devil"]

[node name="FireRect" type="TextureRect" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_t2h3j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="devil_click" from="Devil" to="." method="_on_devil_click"]
